--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
         "next": "^14.1.4",
         "react": "^18.2.0",
         "react-bootstrap": "^2.10.2",
-        "react-dom": "^18.2.0"
+        "react-dom": "^18.2.0",
+        "styled-components": "^6.1.11"
     },
     "devDependencies": {
         "@types/node": "^20.11.30",
