--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "test": "echo \"Error: no test specified\" && exit 1",
         "dev": "next -p 8000",
         "build": "next build",
-        "start": "next start -p 8000"
+        "start": "pm2 start \"next start -p 80\" --name bustransfront"
     },
     "keywords": [],
     "author": "",
